# URC

./: Dockerfile  FROZEN_ASSETS.md  PROTOCOL.md  README.md  REPRO.sha256  SECURITY.md  STATUS.md  URC_SPEC.md  build.sh  chain_0_10.json  genesis.json  genesis.json.sha256  requirements.txt  signed_tx.json  snapshot.json  unsigned_tx.json  urc_chain.py  urc_checkpoints.py  urc_cli.py  urc_difficulty.py  urc_ledger.py  urc_node.py  urc_p2p.py  urc_peers.py  urc_snapshot.py  urc_validate.py  urc_wallet.py
.github/workflows/: URC.yml  ci.yml  publish.yml  rust.yml
docs/: SPECIFICATION.md
examples/: minimal_urc.md
rust-urc/: Cargo.toml
rust-urc/src/: main.rs
rust-urc/src/core/: mod.rs
rust-urc/src/wallet/: mod.rs
scripts/: check_examples.sh
spec/: URC_PROTOCOL.tex
tests/: integration.py  roundtrip.py  send_test.py  sign_tx.py  verify_tx.py
urc-rs/: Cargo.toml
urc-rs/src/: lib.rs
