[package]
name = "rust-urc"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base58 = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_core = "0.6"

